@@ -232,9 +232,9 @@ class MenusHelper
 		$db = JFactory::getDbo();
 		$query = $db->getQuery(true);
 		$query->from('#__menu as m');
-		$query->leftJoin('#__associations as a ON a.id=m.id AND a.context='.$db->quote('com_menus.item'));
-		$query->leftJoin('#__associations as a2 ON a.key=a2.key');
-		$query->leftJoin('#__menu as m2 ON a2.id=m2.id');
+		$query->innerJoin('#__associations as a ON a.id=m.id AND a.context='.$db->quote('com_menus.item'));
+		$query->innerJoin('#__associations as a2 ON a.key=a2.key');
+		$query->innerJoin('#__menu as m2 ON a2.id=m2.id');
 		$query->where('m.id='.(int)$pk);
 		$query->select('m2.language, m2.id');
 		$db->setQuery($query);
